add pretty logger, fix segment model
