# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/segment.Segment"
+                            "$ref": "#/definitions/segment.SegmentRequest"
                         }
                     }
                 ],
@@ -49,7 +49,7 @@
         }
     },
     "definitions": {
-        "segment.Segment": {
+        "segment.SegmentRequest": {
             "type": "object",
             "properties": {
                 "id": {
@@ -60,19 +60,7 @@
                     "type": "array",
                     "items": {
                         "type": "integer"
-                    },
-                    "example": [
-                        116,
-                        104,
-                        105,
-                        115,
-                        32,
-                        105,
-                        115,
-                        32,
-                        97,
-                        32
-                    ]
+                    }
                 },
                 "segment_number": {
                     "type": "integer",
